--- a/notebook.IPYNB
+++ b/notebook.IPYNB
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
        "<Axes: title={'center': 'Transaction Size vs Duration'}, xlabel='Transaction Size', ylabel='Duration (s)'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -811,31 +811,31 @@
        "      <th>0</th>\n",
        "      <td>100</td>\n",
        "      <td>28.452</td>\n",
-       "      <td>3.514691</td>\n",
+       "      <td>3.514691e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1000</td>\n",
        "      <td>12.940</td>\n",
-       "      <td>77.279753</td>\n",
+       "      <td>7.727975e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10000</td>\n",
        "      <td>4.928</td>\n",
-       "      <td>2029.220779</td>\n",
+       "      <td>2.029221e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>100000</td>\n",
        "      <td>2.991</td>\n",
-       "      <td>33433.634236</td>\n",
+       "      <td>3.343363e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1000000</td>\n",
        "      <td>2.302</td>\n",
-       "      <td>434404.865334</td>\n",
+       "      <td>4.344049e+06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -843,35 +843,45 @@
       ],
       "text/plain": [
        "   transaction_size  duration  ops_per_second\n",
-       "0               100    28.452        3.514691\n",
-       "1              1000    12.940       77.279753\n",
-       "2             10000     4.928     2029.220779\n",
-       "3            100000     2.991    33433.634236\n",
-       "4           1000000     2.302   434404.865334"
+       "0               100    28.452    3.514691e+05\n",
+       "1              1000    12.940    7.727975e+05\n",
+       "2             10000     4.928    2.029221e+06\n",
+       "3            100000     2.991    3.343363e+06\n",
+       "4           1000000     2.302    4.344049e+06"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# calculate the ops per second for each experiment\n",
-    "transaction_size_no_backup_df['ops_per_second'] = transaction_size_no_backup_df['transaction_size'] / transaction_size_no_backup_df['duration']\n",
-    "transaction_size_transaction_size_no_backup_dashmap_df['ops_per_second'] = transaction_size_transaction_size_no_backup_dashmap_df['transaction_size'] / transaction_size_transaction_size_no_backup_dashmap_df['duration']\n",
-    "transaction_size_with_file_backup_df['ops_per_second'] = transaction_size_with_file_backup_df['transaction_size'] / transaction_size_with_file_backup_df['duration']\n",
-    "transaction_size_pickledb_df['ops_per_second'] = transaction_size_pickledb_df['transaction_size'] / transaction_size_pickledb_df['duration']\n",
-    "transaction_size_rocksdb_wal_df['ops_per_second'] = transaction_size_rocksdb_wal_df['transaction_size'] / transaction_size_rocksdb_wal_df['duration']\n",
-    "transaction_size_okaywal['ops_per_second'] = transaction_size_okaywal['transaction_size'] / transaction_size_okaywal['duration']\n",
+    "transaction_size_no_backup_df['ops_per_second'] = (transaction_size_no_backup_df['transaction_size'] * transaction_size_no_backup_df['transaction_count']) / transaction_size_no_backup_df['duration']\n",
+    "transaction_size_transaction_size_no_backup_dashmap_df['ops_per_second'] = (transaction_size_transaction_size_no_backup_dashmap_df['transaction_size'] * transaction_size_transaction_size_no_backup_dashmap_df['transaction_count']) / transaction_size_transaction_size_no_backup_dashmap_df['duration']\n",
+    "transaction_size_with_file_backup_df['ops_per_second'] = (transaction_size_with_file_backup_df['transaction_size'] * transaction_size_with_file_backup_df['transaction_count']) / transaction_size_with_file_backup_df['duration']\n",
+    "transaction_size_pickledb_df['ops_per_second'] = (transaction_size_pickledb_df['transaction_size'] * transaction_size_pickledb_df['transaction_count']) / transaction_size_pickledb_df['duration']\n",
+    "transaction_size_rocksdb_wal_df['ops_per_second'] = (transaction_size_rocksdb_wal_df['transaction_size'] * transaction_size_rocksdb_wal_df['transaction_count']) / transaction_size_rocksdb_wal_df['duration']\n",
+    "transaction_size_okaywal['ops_per_second'] = (transaction_size_okaywal['transaction_size'] * transaction_size_okaywal['transaction_count']) / transaction_size_okaywal['duration']\n",
+    "\n",
     "\n",
     "# show table with ops per second for each experiment\n",
-    "#transaction_size_no_backup_df[['transaction_size', 'duration', 'ops_per_second']]\n",
-    "transaction_size_transaction_size_no_backup_dashmap_df[['transaction_size', 'duration', 'ops_per_second']]\n",
+    "transaction_size_no_backup_df[['transaction_size', 'duration', 'ops_per_second']]\n",
+    "# transaction_size_transaction_size_no_backup_dashmap_df[['transaction_size', 'duration', 'ops_per_second']]\n",
     "# transaction_size_with_file_backup_df[['transaction_size', 'duration', 'ops_per_second']]\n",
     "# transaction_size_pickledb_df[['transaction_size', 'duration', 'ops_per_second']]\n",
-    "# transaction_size_rocksdb_wal_df[['transaction_size', 'duration', 'ops_per_second']]\n",
-    "# transaction_size_okaywal[['transaction_size', 'duration', 'ops_per_second']]\n",
+    "# transaction_size_rocksdb_wal_df[['transaction_size', 'duration', 'ops_per_second']]\n",
+    "# transaction_size_okaywal[['transaction_size', 'duration', 'ops_per_second']]\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cpu stats for each experiment\n"
    ]
   }
  ],
